testsuite/tests/properties/invalid_eq/correct_bool.lkt
import common

class Example: FooNode {
    @export fun prop(): Bool = true = true
}
